src/objects/Recurring_Donations_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for the Recurring Donations Package</description>
    <fields>
        <fullName>Custom_Days__c</fullName>
        <inlineHelpText>Custom number of days for recurring donations installment period</inlineHelpText>
        <label>Custom Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISABLE_Donations_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the Donations.trigger (Opportunity, before insert, before update, after insert, after update)</description>
        <inlineHelpText>!!WARNING!!
DISABLES the Donations.trigger  (Opportunity, before insert, before update, 
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_Donations_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_RecurringDonations_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DISABLES the RecurringDonations.trigger (Recurring_Donations__c, ALL).</description>
        <inlineHelpText>!!WARNING!!
DISABLES the RecurringDonations.trigger (Recurring_Donations__c, ALL).
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_RecurringDonations_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Behavior__c</fullName>
        <description>Determines the behavior of any open Opportunities when an open-ended recurring donation is moved to a closed status.</description>
        <inlineHelpText>Determines the behavior of any open Opportunities when an open-ended recurring donation is moved to a closed status.</inlineHelpText>
        <label>Open Opportunity Behavior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Months__c</fullName>
        <description>Number of months in the Opportunity range for an open-ended Recurring Donation.</description>
        <inlineHelpText>Number of months in the Opportunity range for an open-ended Recurring Donation.</inlineHelpText>
        <label>Opportunity Forecast Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recurring Donations Settings</label>
</CustomObject>